Fix table on mobile view

--- a/src/app/user-manage/user-manage.component.css
+++ b/src/app/user-manage/user-manage.component.css
@@ -15,6 +15,12 @@
   width: 100%;
 }
 
+.table-container {
+  width: 100%;
+  overflow-x: auto;
+  background: white;
+}
+
 th.mat-sort-header-sorted {
   color: black;
 }
@@ -29,6 +35,10 @@ th.mat-sort-header-sorted {
   height: 2.5rem;
   border-radius: 50%;
   padding: 0.25rem;
+}
+
+.transparent {
+  background: none !important;
 }
 
 @media (min-width: 1024px) {
